--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-  * { box-sizing: border-box; margin: 0; padding: 0; font-family: Arial, sans-serif; }
+body {
+  background: red !important;
+}
+
+
+* { box-sizing: border-box; margin: 0; padding: 0; font-family: Arial, sans-serif; }
    body {
   line-height: 1.6;
   background: #f4f4f4;
