--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body {
       rgba(0,0,0,0.6),
       rgba(0,0,0,0.6)
     ),
-    url("images/salon.jpg") center/cover no-repeat;
+    url("background.jpg") center/cover no-repeat;
 justify-content: center;
 text-align: center;
   display: flex;
