--- a/style.css
+++ b/style.css
@@ -77,18 +77,20 @@
 .nav-links a:hover {
   text-decoration: underline;
 }
+
 .hero {
-  width: 100%;
   min-height: 80vh;
   background: linear-gradient(
       rgba(0,0,0,0.6),
       rgba(0,0,0,0.6)
     ),
-    url("background.jpg") center/cover no-repeat;
-justify-content: center;
-text-align: center;
+    url("salon.jpg") center / cover no-repeat;
+
   display: flex;
   align-items: center;
+  justify-content: center;
+  text-align: center;
+  border: 5px solid lime;
 }
 
 .hero-content {
